force-app/main/default/objects/Document_Structure__mdt/Document_Structure__mdt.object-meta.xml
<CustomObject>
    <label>Document Structure</label>
    <pluralLabel>Document Structures</pluralLabel>
</CustomObject>