force-app/main/default/objects/Document_Structure__mdt/fields/Additional_Borrower_Checklist_Filtering__c.field-meta.xml
<CustomField>
    <fullName>Additional_Borrower_Checklist_Filtering__c</fullName>
    <label>Additional_Borrower Checklist Filtering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>