force-app/main/default/objects/Document_Structure__mdt/fields/Additional_C2C_Filtering__c.field-meta.xml
<CustomField>
    <fullName>Additional_C2C_Filtering__c</fullName>
    <label>Additional C2C Filtering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>