force-app/main/default/objects/Document_Structure__mdt/fields/Borrower_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Checklist__c</fullName>
    <label>Borrower Checklist</label>
    <referenceTo>Borrower_Checklist__mdt</referenceTo>
    <relationshipLabel>Document Structures</relationshipLabel>
    <relationshipName>Document_Structures</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>