force-app/main/default/objects/Document_Structure__mdt/fields/C2C_Required_Filtering__c.field-meta.xml
<CustomField>
    <fullName>C2C_Required_Filtering__c</fullName>
    <label>C2C Required Filtering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>