force-app/main/default/objects/Document_Structure__mdt/fields/C2C_Sort__c.field-meta.xml
<CustomField>
    <fullName>C2C_Sort__c</fullName>
    <label>C2C Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>