force-app/main/default/objects/Document_Structure__mdt/fields/Clear_To_Close_Setting__c.field-meta.xml
<CustomField>
    <fullName>Clear_To_Close_Setting__c</fullName>
    <label>Clear To Close Setting</label>
    <referenceTo>Clear_To_Close__mdt</referenceTo>
    <relationshipLabel>Document Structures</relationshipLabel>
    <relationshipName>Document_Structures</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>