force-app/main/default/objects/Document_Structure__mdt/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once uploaded, Borrower users are unable to view this document</description>
    <inlineHelpText>Once uploaded, Borrower users are unable to view this document</inlineHelpText>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>