force-app/main/default/objects/Document_Structure__mdt/fields/Default_Exclude_from_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Exclude_from_Loan_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Exclude from Loan Status</label>
    <type>Checkbox</type>
</CustomField>