force-app/main/default/objects/Document_Structure__mdt/fields/Display_In_Internal_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Display_In_Internal_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will control if this Document Type appears in the Picklist for Internal Users in Salesforce</description>
    <inlineHelpText>This will control if this Document Type appears in the Picklist for Internal Users in Salesforce</inlineHelpText>
    <label>Display In Internal Picklist</label>
    <type>Checkbox</type>
</CustomField>