force-app/main/default/objects/Document_Structure__mdt/fields/Display_In_Portal_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Display_In_Portal_Picklist__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will control if this Document Type appears in the Picklist on the Loan Portal</description>
    <inlineHelpText>This will control if this Document Type appears in the Picklist on the Loan Portal</inlineHelpText>
    <label>Display In Portal Picklist</label>
    <type>Checkbox</type>
</CustomField>