force-app/main/default/objects/Document_Structure__mdt/fields/Expires_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Expires_in_Days__c</fullName>
    <label>Expires in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>