force-app/main/default/objects/Document_Structure__mdt/fields/Folder_Structure_String__c.field-meta.xml
<CustomField>
    <fullName>Folder_Structure_String__c</fullName>
    <label>Folder Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>