force-app/main/default/objects/Document_Structure__mdt/fields/Include_for_Term_Sheet_Approval__c.field-meta.xml
<CustomField>
    <fullName>Include_for_Term_Sheet_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will make this Deal Doc show as a doc that can be selected when submitting a Deal for Term Sheet approval</description>
    <inlineHelpText>This will make this Deal Doc show as a doc that can be selected when submitting a Deal for Term Sheet approval</inlineHelpText>
    <label>Include for Term Sheet Approval</label>
    <type>Checkbox</type>
</CustomField>