force-app/main/default/objects/Document_Structure__mdt/fields/Loan_Status_Sort__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status_Sort__c</fullName>
    <label>Loan Status Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>