force-app/main/default/objects/Document_Structure__mdt/fields/Post_Close_Setting__c.field-meta.xml
<CustomField>
    <fullName>Post_Close_Setting__c</fullName>
    <label>Post Close Setting</label>
    <referenceTo>Post_Close_Setting__mdt</referenceTo>
    <relationshipLabel>Document Structures</relationshipLabel>
    <relationshipName>Document_Structures</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>