force-app/main/default/objects/Document_Structure__mdt/fields/Post_Closing_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Criteria__c</fullName>
    <label>Post Closing Criteria</label>
    <type>TextArea</type>
</CustomField>