force-app/main/default/objects/Document_Structure__mdt/fields/Post_Closing_Item_Per_County__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Item_Per_County__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will indicate if a Post Closing Item is created per County</description>
    <inlineHelpText>This will indicate if a Post Closing Item is created per County</inlineHelpText>
    <label>Post Closing Item Per County</label>
    <type>Checkbox</type>
</CustomField>