force-app/main/default/objects/Document_Structure__mdt/fields/Post_Closing_Required__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Closing Required</label>
    <type>Checkbox</type>
</CustomField>