force-app/main/default/objects/Document_Structure__mdt/fields/Post_Closing_sObjectType__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_sObjectType__c</fullName>
    <label>Post Closing sObjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Deal_Contact__c</fullName>
            </value>
            <value>
                <fullName>Advance__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>