force-app/main/default/objects/Document_Structure__mdt/fields/Post_Closing_Sort__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Sort__c</fullName>
    <label>Post Closing Sort</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>