force-app/main/default/objects/Document_Structure__mdt/fields/Post_Closing_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Trigger__c</fullName>
    <description>This determines at which point the Post Closing Item Record is created</description>
    <inlineHelpText>This determines at which point the Post Closing Item Record is created</inlineHelpText>
    <label>Post Closing Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AdvanceCreation</fullName>
            </value>
            <value>
                <fullName>AdvanceRenovationCreation</fullName>
            </value>
            <value>
                <fullName>BorrowerEntityCreation</fullName>
            </value>
            <value>
                <fullName>DealClosedWon</fullName>
            </value>
            <value>
                <fullName>DealCreation</fullName>
            </value>
            <value>
                <fullName>EntityCreation</fullName>
            </value>
            <value>
                <fullName>GuarantorCreation</fullName>
            </value>
            <value>
                <fullName>IncludesRenovation</fullName>
            </value>
            <value>
                <fullName>PledgorCreation</fullName>
            </value>
            <value>
                <fullName>SponsorCreation</fullName>
            </value>
            <value>
                <fullName>afterInsert</fullName>
            </value>
            <value>
                <fullName>afterUpdate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>