force-app/main/default/objects/Document_Structure__mdt/fields/Recorded_Document__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Document is Recorded</description>
    <label>Recorded Document</label>
    <type>Checkbox</type>
</CustomField>