force-app/main/default/objects/Document_Structure__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOC_Loan</fullName>
            </value>
            <value>
                <fullName>Term_Loan</fullName>
            </value>
            <value>
                <fullName>Single_Asset_Bridge_Loan</fullName>
            </value>
            <value>
                <fullName>Single_Asset_Loan</fullName>
            </value>
            <value>
                <fullName>Acquired_SAB_Loan_Active</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Investor_DSCR</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
                <isActive>false</isActive>
                <label>Term</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>