force-app/main/default/objects/Document_Structure__mdt/fields/Required_for_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Document is required to Onboard with the Servicer</description>
    <inlineHelpText>Indicates if this Document is required to Onboard with the Servicer</inlineHelpText>
    <label>Required for Onboarding</label>
    <type>Checkbox</type>
</CustomField>