force-app/main/default/objects/Document_Structure__mdt/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
                <default>true</default>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>Property__c</fullName>
            </value>
            <value>
                <fullName>Advance__c</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>