force-app/main/default/objects/Document_Structure__mdt/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <label>Sort</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>