force-app/main/default/objects/Document_Structure__mdt/fields/Stage_Required__c.field-meta.xml
<CustomField>
    <fullName>Stage_Required__c</fullName>
    <label>Stage Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>