force-app/main/default/objects/Document_Structure__mdt/fields/Upload_Notification_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Upload_Notification_Underwriter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will send the Underwriter an email alert when a Deal Document is uploaded by a Portal User.</description>
    <inlineHelpText>This will send the Underwriter an email alert when a Deal Document is uploaded by a Portal User.</inlineHelpText>
    <label>Upload Notification - Underwriter</label>
    <type>Checkbox</type>
</CustomField>