force-app/main/default/objects/Document_Structure__mdt/fields/Vendor_Access__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provides Vendors access to this Doc Type.  Also need to select the vendor or vendor type for the Vendor Type Access</description>
    <inlineHelpText>Provides Vendors access to this Doc Type.  Also need to select the vendor or vendor type for the Vendor Type Access</inlineHelpText>
    <label>Vendor Access</label>
    <type>Checkbox</type>
</CustomField>