force-app/main/default/objects/Document_Structure__mdt/fields/Vendor_Type_Access__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type_Access__c</fullName>
    <description>Controls which Vendors have access to this Doc Type.</description>
    <inlineHelpText>Enter the Account ID or the Vendor Type to grant access to this Doc Type</inlineHelpText>
    <label>Vendor Type Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>