force-app/main/default/objects/Document_Structure__mdt/listViews/All_Docs.listView-meta.xml
<ListView>
    <fullName>All_Docs</fullName>
    <columns>Folder_Structure_String__c</columns>
    <columns>Sort__c</columns>
    <columns>Document_Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>RecordType__c</columns>
    <columns>sObject__c</columns>
    <columns>Vendor_Access__c</columns>
    <columns>Vendor_Type_Access__c</columns>
    <columns>Borrower_Access__c</columns>
    <columns>Confidential__c</columns>
    <columns>Clear_To_Close_Setting__c</columns>
    <columns>Borrower_Checklist__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Docs</label>
</ListView>