force-app/main/default/objects/Document_Structure__mdt/listViews/Bridge_Advance.listView-meta.xml
<ListView>
    <fullName>Bridge_Advance</fullName>
    <columns>Folder_Structure_String__c</columns>
    <columns>Document_Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>RecordType__c</columns>
    <columns>sObject__c</columns>
    <columns>Sort__c</columns>
    <columns>Vendor_Access__c</columns>
    <columns>Vendor_Type_Access__c</columns>
    <columns>Borrower_Access__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sObject__c</field>
        <operation>equals</operation>
        <value>Advance__c</value>
    </filters>
    <filters>
        <field>RecordType__c</field>
        <operation>equals</operation>
        <value>LOC_Loan</value>
    </filters>
    <label>Bridge Advance</label>
</ListView>