force-app/main/default/objects/Document_Structure__mdt/listViews/Bridge_Advance_Items_in_Post_Closing.listView-meta.xml
<ListView>
    <fullName>Bridge_Advance_Items_in_Post_Closing</fullName>
    <columns>Folder_Structure_String__c</columns>
    <columns>Document_Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>RecordType__c</columns>
    <columns>sObject__c</columns>
    <columns>Sort__c</columns>
    <columns>Post_Close_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sObject__c</field>
        <operation>equals</operation>
        <value>Advance__c</value>
    </filters>
    <filters>
        <field>RecordType__c</field>
        <operation>equals</operation>
        <value>LOC_Loan</value>
    </filters>
    <filters>
        <field>Post_Close_Setting__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Bridge Advance - Items in Post Closing</label>
</ListView>