force-app/main/default/objects/Document_Structure__mdt/listViews/Bridge_Clear_to_Close_Docs.listView-meta.xml
<ListView>
    <fullName>Bridge_Clear_to_Close_Docs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Clear_To_Close_Setting__c</columns>
    <columns>Required__c</columns>
    <columns>Document_Type__c</columns>
    <columns>RecordType__c</columns>
    <columns>sObject__c</columns>
    <columns>Additional_C2C_Filtering__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clear_To_Close_Setting__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RecordType__c</field>
        <operation>equals</operation>
        <value>LOC_Loan</value>
    </filters>
    <label>Bridge Clear to Close Docs</label>
</ListView>