force-app/main/default/objects/Document_Structure__mdt/listViews/Bridge_Opportunity_Items_in_Post_Closi.listView-meta.xml
<ListView>
    <fullName>Bridge_Opportunity_Items_in_Post_Closi</fullName>
    <columns>Folder_Structure_String__c</columns>
    <columns>Sort__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Vendor_Type_Access__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>RecordType__c</columns>
    <columns>sObject__c</columns>
    <columns>Post_Close_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType__c</field>
        <operation>equals</operation>
        <value>LOC_Loan</value>
    </filters>
    <filters>
        <field>sObject__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <filters>
        <field>Post_Close_Setting__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Bridge Opportunity - Items in Post Closi</label>
</ListView>