force-app/main/default/objects/Document_Structure__mdt/listViews/Bridge_Opportunity_w_o_Vendor_Access.listView-meta.xml
<ListView>
    <fullName>Bridge_Opportunity_w_o_Vendor_Access</fullName>
    <columns>Folder_Structure_String__c</columns>
    <columns>Sort__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Vendor_Type_Access__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>RecordType__c</columns>
    <columns>sObject__c</columns>
    <columns>Vendor_Access__c</columns>
    <columns>Borrower_Access__c</columns>
    <columns>Clear_To_Close_Setting__c</columns>
    <columns>Borrower_Checklist__c</columns>
    <columns>Confidential__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType__c</field>
        <operation>equals</operation>
        <value>LOC_Loan</value>
    </filters>
    <filters>
        <field>sObject__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <filters>
        <field>Vendor_Access__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Bridge Opportunity w/o Vendor Access</label>
</ListView>