force-app/main/default/objects/Document_Structure__mdt/listViews/Bridge_Post_Closing_Docs.listView-meta.xml
<ListView>
    <fullName>Bridge_Post_Closing_Docs</fullName>
    <columns>Document_Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Folder_Structure_String__c</columns>
    <columns>Post_Close_Setting__c</columns>
    <columns>Post_Closing_sObjectType__c</columns>
    <columns>Post_Closing_Trigger__c</columns>
    <columns>Post_Closing_Item_Per_County__c</columns>
    <columns>Post_Closing_Criteria__c</columns>
    <columns>Post_Closing_Sort__c</columns>
    <columns>RecordType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Post_Close_Setting__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RecordType__c</field>
        <operation>equals</operation>
        <value>LOC_Loan</value>
    </filters>
    <label>Bridge Post Closing Docs</label>
</ListView>